--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,21 @@
 <header>
     <div class="container">
         <nav class="navbar navbar-expand">
-            <a class="navbar-brand" href="#">uxmint design</a>
+            <!--<a class="navbar-brand" href="#">uxmint design</a>-->
+            <img src="./assets/images/logo.png">
             <div class="collapse navbar-collapse">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Work</a>
+                  <a class="nav-link" routerLink="works">Work</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" routerLink="about-us">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Services</a>
+                  <a class="nav-link" routerLink="services">Services</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Let's Talk</a>
+                    <a class="nav-link" routerLink="contact-us">Let's Talk</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link menu-activator" (click)="openMenu()"><img src="https://img.icons8.com/ios-filled/50/3B3B3B/menu--v1.png"/></a>
@@ -34,13 +35,13 @@
             <h2>What We Do</h2>
             <ul class="contact">
                 <li>
-                    <a href="works">Work</a>
+                    <a routerLink="works">Work</a>
                 </li>
                 <li>
-                    <a href="services">Service</a>
+                    <a routerLink="services">Service</a>
                 </li>
                 <li>
-                    <a href="engagement-models">Engagement Models</a>
+                    <a routerLink="engagement-models">Engagement Models</a>
                 </li>
             </ul>
             <!--<div class="button">
@@ -51,16 +52,16 @@
             <h2>Who We Are</h2>
             <ul class="contact">
                 <li>
-                    <a href="about-us">About Us</a>
+                    <a routerLink="about-us">About Us</a>
                 </li>
                 <li>
-                    <a href="blogs">Blogs</a>
+                    <a routerLink="blogs">Blogs</a>
                 </li>
                 <li>
-                    <a href="careers">Careers</a>
+                    <a routerLink="careers">Careers</a>
                 </li>
                 <li>
-                    <a href="contact-us">Contact</a>
+                    <a routerLink="contact-us">Contact</a>
                 </li>
             </ul>
         </div>
@@ -68,19 +69,19 @@
             <h2>Services</h2>
             <ul class="contact">
                 <li>
-                    <a href="user-experience">User Experience</a>
+                    <a routerLink="service/user-experience">User Experience</a>
                 </li>
                 <li>
-                    <a href="interface-design">Interface Design</a>
+                    <a routerLink="service/interface-design">Interface Design</a>
                 </li>
                 <li>
-                    <a href="ui-development">UI Development</a>
+                    <a routerLink="service/ui-development">UI Development</a>
                 </li>
                 <!--<li>
                     <a href="#">End To End Development</a>
                 </li>-->
                 <li>
-                    <a href="usability-testing">Usability Testing</a>
+                    <a routerLink="service/usability-testing">Usability Testing</a>
                 </li>
             </ul>
         </div>
