--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -3,23 +3,21 @@
       <div class="container">
          <div class="design">
             <h1>There is always a better way <br> to do it & we find it </h1>
-            <h5>- by Thomas Alva Edison + uxmint</h5>
+            <h4>- by Thomas Alva Edison + uxmint</h4>
          </div>
       </div>
    </div>
    <div class="about-layout">
       <div class="row">
          <div class="col-md-6 design-layout">
-           <div class="container">
             <div class="design-left">
                <h2> We have created <br> products that are <br> loved by users and <br> product owners</h2>
                <h6>If you want your product to be <br> loved by its users ?</h6>
                <div class="button">
-                  <div class="btn btn-white">Let us Know </div>
-               </div>
+                  <div class="btn" routerLink="/contact-us">Let us Know</div>
+              </div>
             </div>
             </div>
-         </div>
          <div class="col-md-6 design-layouts">
            <div class="container">
               <div class="row">
@@ -81,14 +79,12 @@
    <div class="about-layout1">
       <div class="row">
          <div class="col-md-6 design-layout">
-           <div class="container">
             <div class="design-left">
                <h2> We have built & are building some great products together</h2>
                <div class="button">
-                  <div class="btn btn-white">Check our Service</div>
+                  <div class="btn btnn" routerLink="/services">Check our Service</div>
                </div>
             </div>
-         </div>
          </div>
          <div class="col-md-6 design-layouts ">
            <div class="layouts">
@@ -96,7 +92,7 @@
                <h5>Startups</h5>
                <p>We've been there and we exactly know the struggles and whst it takes to build a product from  the scrarch. We have the expertise to validate your ideas with the right process and to bring the right solutions for your target customers and ensure a successful launch</p>
             </div>
-            <div class="design-right">
+            <div class="design-rights">
                <h5>Established Brands</h5>
                <p>We work with mid-size or large organisations in designing or redesigning complex systems. Optimising the process to bring transformation to the legacysystem.</p>
             </div>
@@ -110,7 +106,7 @@
             <h2>We are a mix of Designers, Artists, <br> Psychologists, Programmers, Engineers, <br> Architects & more. </h2>
             <h6>We've come together to build great Products and Services. Drop in <br> your detail if you want to be a part of us.</h6>
             <div class="button">
-               <div class="btn btn-white">Join our Team</div>
+               <div class="btn btn-white" routerLink="/contact-us">Join our Team</div>
             </div>
          </div>
       </div>
