--- a/src/app/components/career/career.component.html
+++ b/src/app/components/career/career.component.html
@@ -10,21 +10,22 @@
     <div class="career-layout">
        <div class="container">
           <div class="career-design">
-             <h2>Open opportunities</h2>
+             <h1>Open opportunities</h1>
              <mat-card> 
              <div class="row designer ">
                 <div class="col-md-4">
-                   <h1 routerLink="/career/ui/job-description">User Experience Designer</h1>
+                   <h2> USER EXPERIENCE DESIGNER </h2>
+                  <h6>Fulltime </h6> 
                 </div>
                 <div class="col-md-3 only-mobile">
                   <h5>Chennai | India</h5><h6>Location</h6>
                </div>
                 <div class="col-md-3 only-mobile">
-                  <h5>2 - 4 Years</h5><h6>Fulltime </h6> 
+                  <h5>2 - 4 Years</h5><h6>Experience </h6> 
                 </div>
                 <div class="col-md-2">
                   <div class="button">
-                     <div class="btn btn-white">Cancel</div>
+                     <div class="btn btn-white" routerLink="/career/ui/job-description">View</div>
                   </div>
                 </div>
              </div>
