--- a/src/app/components/engagement-models/engagement-models.component.html
+++ b/src/app/components/engagement-models/engagement-models.component.html
@@ -8,6 +8,7 @@
     </div>
  </div>
 </div>
+<div class="hr"></div>
 <div class="feature-work">
    <ngu-carousel class="work-carousel" #workCarousel [inputs]="worksCarouselConfig" [dataSource]="works">
       <ngu-tile *nguCarouselDef="let item; let i = index">
@@ -76,238 +77,7 @@
          </li>
       </ul>
       </ngu-carousel>
- </div>
-
-<!--<div class="engagement-layout1">
-    <div class="container">
-      <div [ngbNavOutlet]="nav"></div>
-       <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs">
-          <li ngbNavItem="1" class="tabs">
-            <a ngbNavLink></a>
-             <ng-template ngbNavContent>
-                <div class="row">
-                   <div class="col-md-6 design-left">
-                      <h2>Fixed Bid</h2>
-                      <p>The fixed bid model suites best for projects with defined scope and defined requirement specification.
-                         The timeline and effort can be estimated based on the scope or work.
-                         Any changes or enhancements not part of the scope would be taken as
-                         part of Change Requests with separate estimates. 
-                      </p>
-                   </div>
-                   <div class="col-md-6 design-right">
-                      <div class="row logo-image">
-                         <div class="col-md-2">
-                            <div class="logo-images">
-                               <img src="./assets/images/services/logo-7.svg">
-                            </div>
-                         </div>
-                         <div class="col-md-8">
-                            <div class="logo-images">
-                               <p>Clear scope definition and documented requirements</p>
-                            </div>
-                         </div>
-                      </div>
-                      <div class="row logo-image">
-                         <div class="col-md-2">
-                            <div class="logo-images">
-                               <img src="./assets/images/services/logo-8.svg">
-                            </div>
-                         </div>
-                         <div class="col-md-8">
-                            <div class="logo-images">
-                               <p>Fits for small and medium projects</p>
-                            </div>
-                         </div>
-                      </div>
-                      <div class="row logo-image">
-                         <div class="col-md-2">
-                            <div class="logo-images">
-                               <img src="./assets/images/services/logo-9.svg">
-                            </div>
-                         </div>
-                         <div class="col-md-8">
-                            <div class="logo-images">
-                               <p> Cost efficient for small projects with limited budget</p>
-                            </div>
-                         </div>
-                      </div>
-                      <div class="row logo-image">
-                         <div class="col-md-2">
-                            <div class="logo-images">
-                               <img src="./assets/images/services/logo-10.svg">
-                            </div>
-                         </div>
-                         <div class="col-md-8">
-                            <div class="logo-images">
-                               <p>Clear scope definition and documented requirements</p>
-                            </div>
-                         </div>
-                      </div>
-                   </div>
-                </div>
-             </ng-template>
-          </li>
-          <li ngbNavItem="2" class="tabs1">
-            <a ngbNavLink></a>
-             <ng-template ngbNavContent>
-                <div class="row">
-                   <div class="col-md-6 design-left">
-                      <h2>Time & Material</h2>
-                      <p>The time & material model are cost efficient for complex projects that are dynamic this suites best.
-                         Our team is flexible to handle changes and accommodate the product needs.
-                         The cost is billed based on the total team effort in hours involved in the project.
-                         The billing is done on monthly basis. 
-                      </p>
-                   </div>
-                   <div class="col-md-6 design-right">
-                      <div class="row logo-image">
-                         <div class="col-md-2">
-                            <div class="logo-images">
-                               <img src="./assets/images/services/logo-7.svg">
-                            </div>
-                         </div>
-                         <div class="col-md-8">
-                            <div class="logo-images">
-                               <p>Highly suitable for product driven design and enterprise projects</p>
-                            </div>
-                         </div>
-                      </div>
-                      <div class="row logo-image">
-                         <div class="col-md-2">
-                            <div class="logo-images">
-                               <img src="./assets/images/services/logo-8.svg">
-                            </div>
-                         </div>
-                         <div class="col-md-8">
-                            <div class="logo-images">
-                               <p>Allows better flexibility for changing design directions</p>
-                            </div>
-                         </div>
-                      </div>
-                      <div class="row logo-image">
-                         <div class="col-md-2">
-                            <div class="logo-images">
-                               <img src="./assets/images/services/logo-9.svg">
-                            </div>
-                         </div>
-                         <div class="col-md-8">
-                            <div class="logo-images">
-                               <p> Transparent billing and full control over time and budget</p>
-                            </div>
-                         </div>
-                      </div>
-                   </div>
-                </div>
-             </ng-template>
-          </li>
-          <li ngbNavItem="3" class="tabs1">
-            <a ngbNavLink></a>
-             <ng-template ngbNavContent>
-                <div class="row">
-                   <div class="col-md-6 design-left">
-                      <h2>Dedicated Team Model</h2>
-                      <p>Want our design team to join force with the internal business & development? We are in! This works best for
-                         long term complex and consistent projects that demand design team to understand the
-                         domain and work inline with the business team. 
-                      </p>
-                   </div>
-                   <div class="col-md-6 design-right">
-                      <div class="row logo-image">
-                         <div class="col-md-2">
-                            <div class="logo-images">
-                               <img src="./assets/images/services/logo-7.svg">
-                            </div>
-                         </div>
-                         <div class="col-md-8">
-                            <div class="logo-images">
-                               <p>Skilled and experienced design team</p>
-                            </div>
-                         </div>
-                      </div>
-                      <div class="row logo-image">
-                         <div class="col-md-2">
-                            <div class="logo-images">
-                               <img src="./assets/images/services/logo-8.svg">
-                            </div>
-                         </div>
-                         <div class="col-md-8">
-                            <div class="logo-images">
-                               <p>Reduces in-house cost on hiring skilled resources</p>
-                            </div>
-                         </div>
-                      </div>
-                      <div class="row logo-image">
-                         <div class="col-md-2">
-                            <div class="logo-images">
-                               <img src="./assets/images/services/logo-9.svg">
-                            </div>
-                         </div>
-                         <div class="col-md-8">
-                            <div class="logo-images">
-                               <p> Team be scaled-up with very less notice</p>
-                            </div>
-                         </div>
-                      </div>
-                   </div>
-                </div>
-             </ng-template>
-          </li>
-          <li ngbNavItem="4" class="tabs1">
-            <a ngbNavLink></a>
-             <ng-template ngbNavContent>
-                <div class="row">
-                   <div class="col-md-6 design-left">
-                      <h2>Staff Augmentation Model</h2>
-                      <p>Need to leverage your existing design team? Our design experts can loop in to design along with your internal team.
-                         This work best when there is need for business to ramp up without much of time to train new hires.
-                         The billing can be done on monthly basis. 
-                      </p>
-                   </div>
-                   <div class="col-md-6 design-right">
-                      <div class="row logo-image">
-                         <div class="col-md-2">
-                            <div class="logo-images">
-                               <img src="./assets/images/services/logo-7.svg">
-                            </div>
-                         </div>
-                         <div class="col-md-8">
-                            <div class="logo-images">
-                               <p>Reduces time to hire and train</p>
-                            </div>
-                         </div>
-                      </div>
-                      <div class="row logo-image">
-                         <div class="col-md-2">
-                            <div class="logo-images">
-                               <img src="./assets/images/services/logo-8.svg">
-                            </div>
-                         </div>
-                         <div class="col-md-8">
-                            <div class="logo-images">
-                               <p>Skilled and experienced designers</p>
-                            </div>
-                         </div>
-                      </div>
-                      <div class="row logo-image">
-                         <div class="col-md-2">
-                            <div class="logo-images">
-                               <img src="./assets/images/services/logo-9.svg">
-                            </div>
-                         </div>
-                         <div class="col-md-8">
-                            <div class="logo-images">
-                               <p> Reduces in-house cost on hiring full-time resources</p>
-                            </div>
-                         </div>
-                      </div>
-                   </div>
-                </div>
-             </ng-template>
-          </li>
-       </ul>
-      </div>
-    </div>-->
-
+   </div>
     <ngb-accordion [closeOthers]="true" activeIds="static-1" class="only-mobile">
       <ngb-panel id="static-1"  >  
          <ng-template ngbPanelTitle>
