--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,13 +7,13 @@
                     <h3>What We Do</h3>
                 </li>
                 <li>
-                    <a href="#">Work</a>
+                    <a routerLink="works">Work</a>
                 </li>
                 <li>
-                    <a href="#">Services</a>
+                    <a routerLink="services">Services</a>
                 </li>
                 <li>
-                    <a href="#">Engagement Models</a>
+                    <a routerLink="engagement-models">Engagement Models</a>
                 </li>
             </ul>
         </div>
@@ -23,16 +23,16 @@
                     <h3>Who We Are</h3>
                 </li>
                 <li>
-                    <a href="#">About Us</a>
+                    <a routerLink="about-us">About Us</a>
                 </li>
                 <li>
-                    <a href="#">Blogs</a>
+                    <a routerLink="blogs">Blogs</a>
                 </li>
                 <li>
-                    <a href="#">Career</a>
+                    <a routerLink="careers">Career</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a routerLink="contact-us">Contact</a>
                 </li>
             </ul>
         </div>
@@ -42,19 +42,19 @@
                     <h3>Content</h3>
                 </li>
                 <li>
-                    <a href="#">User Experience</a>
+                    <a routerLink="service/user-experience">User Experience</a>
                 </li>
                 <li>
-                    <a href="#">Interface Design</a>
+                    <a routerLink="service/interface-design">Interface Design</a>
                 </li>
                 <li>
-                    <a href="#">UI Development</a>
+                    <a routerLink="service/ui-development">UI Development</a>
                 </li>
                 <li>
-                    <a href="#">End to End Development</a>
+                    <a routerLink="service/end-to-end-development">End to End Development</a>
                 </li>
                 <li>
-                    <a href="#">Usability Testing</a>
+                    <a routerLink="service/usability-testing">Usability Testing</a>
                 </li>
             </ul>
         </div>
@@ -66,13 +66,13 @@
             <h5>For a quick response</h5>
             <ul>
                 <li>
-                    <a href="#">hello@uxmint.design</a>
+                    <a routerLink="mailto:enquire@uxmint.in">hello@uxmint.in</a>
                 </li>
                 <li>
-                    <a href="#">+91 9884053886</a>
+                    <a routerLink="tel:+91 9884053886">+91 9884053886</a>
                 </li>
                 <li>
-                    <a href="#">+91 9940410072</a>
+                    <a routerLink="tel:+91 9940410072">+91 9940410072</a>
                 </li>
             </ul>
         </div>
@@ -80,10 +80,10 @@
             <h5>Follow Us On</h5>
             <ul>
                 <li>
-                    <a href="#"><img src="https://img.icons8.com/small/50/FFFFFF/linkedin.png"/></a>
+                    <a routerLink="https://www.linkedin.com/school/uxmint"><img src="https://img.icons8.com/small/50/FFFFFF/linkedin.png"/></a>
                 </li>
                 <li>
-                    <a href="#"><img src="https://img.icons8.com/small/50/FFFFFF/medium.png"/></a>
+                    <a routerLink="https://medium.com/uxmint"><img src="https://img.icons8.com/small/50/FFFFFF/medium.png"/></a>
                 </li>
             </ul>
         </div>
