--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
        <div class="container">
           <h2>We design and bring</h2>
           <h1>Digital Transformation</h1>
-          <p>UX CONSULTING. &nbsp;&nbsp;USABILITY TESTING. &nbsp;&nbsp;USER INTERFACE DESIGN. &nbsp;&nbsp;FRONT END DEVELOPMENT. &nbsp;&nbsp;BACKEND DEVELOPMENT</p>
+          <p>UX Consulting. &nbsp;&nbsp;Usability Testing. &nbsp;&nbsp;User Interface Design. &nbsp;&nbsp;Front End Development.</p>
        </div>
     </div>
     <div class="feature-work">
@@ -14,7 +14,7 @@
                        <h2>Digital Transformation for Telcom</h2>
                        <h4>UX . UI . Mobile . B2B</h4>
                        <div class="button">
-                           <div class="btn" >Case Study</div>
+                           <div class="btn" routerLink="/work/networking">Case Study</div>
                        </div>
                    </div>
                </div>
@@ -22,15 +22,11 @@
                    <div class="image">
                      <img src="./assets/images/home/transformation.png">
                    </div>
+                  </div>
                </div>
            </div>
-    </div>
     <div class="products">
        <div class="container">
-          <!--<h4>uxmint design</h4>
-           <div class="logo">
-             <img src="./assets/images/logo-white.png">
-          </div> -->
           <div class="row">
              <div class="col-md-9">
                 <h2>Sculpting products that Users admire & Businesses benefit</h2>
@@ -44,7 +40,7 @@
              <div class="col-md-5"></div>
           </div>
           <div class="button">
-             <div class="btn">Get to know us</div>
+             <div class="btn" routerLink="about-us">Get to know us</div>
           </div>
         </div>
     </div>
@@ -259,7 +255,7 @@
                 </div>
              </div>
               <div class="button">
-                   <div class="btn">View All</div>
+                   <div class="btn" routerLink="services">View All</div>
                 </div>
             </div>
           </div>
@@ -268,7 +264,7 @@
           <div class="col-md-6 left">
              <h2>MINTify your thoughts with our latest blogs and articles</h2>
              <div class="button">
-                <div class="btn btnn">Read Blog</div>
+                <div class="btn btnn" routerLink="blogs">Read Blog</div>
              </div>
           </div>
           <div class="col-md-6 right">
@@ -295,10 +291,10 @@
        <div class="container">
          <div class="row">
             <div class="col-md-4">
-            <h2>Let's craft design together!</h2>
+            <h2>Let's craft <br>design together!</h2>
          </div>
             <div class="button">
-                <div class="btn-white">Let's Talk</div>
+                <div class="btn-white" routerLink="contact-us">Let's Talk</div>
             </div>
        </div>
        </div>
