--- a/src/app/components/works/works.component.html
+++ b/src/app/components/works/works.component.html
@@ -8,12 +8,11 @@
        </div>
     </div>
     <div class="cater">
-      <div class="container">
             <div class="row left">
                <div class="col-md-5">
                   <div class="row types">
                      <div class="col-md-7">
-                        <h1>7 +</h1>
+                        <h2>15 +</h2>
                      </div>
                      <div class="col-md-3">
                         <h4>satisfied clients</h4>
@@ -22,26 +21,25 @@
                  </div>
            <div class="col-md-5">
                <div class="row types">
-                  <div class="col-md-7">
-                     <h1>7 +</h1>
+                  <div class="col-md-6">
+                     <h2>7 +</h2>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-4">
                      <h4>Years of Service</h4>
                   </div>
                </div>
               </div>
             </div>
            </div>
-         </div>
-    <div class="design-layout">
+ <div class="design-layout">
        <div class="container">
           <div class="row">
              <div class="col-md-6 only_web">
                 <div class="banner-header ">
-                   <h1>Digital<br>Transformation<br>for Telcom</h1>
+                   <h1>Digital Transformation<br> for Telcom</h1>
                    <h6>UX <span>. UI .</span><span> Mobile .</span><span>B2B</span></h6>
                    <div class="button">
-                      <div class="btn btn-white">Case Study</div>
+                      <div class="btn btn-white" routerLink="/work/networking">Case Study</div>
                    </div>
                 </div>
              </div>
@@ -51,10 +49,10 @@
                 </div>
              </div>
              <div class=" col-sm-12 banner-header only-mobile">
-                <h1>Digital Transformation<br>for Telcom</h1>
-                <h6>UX <span>. UI .</span><span> Mobile .</span><span>B2B</span></h6>
+               <h1>Digital Transformation for Telcom</h1>
+                   <h6>UX <span>. UI .</span><span> Mobile .</span><span>B2B</span></h6>
                 <div class="button">
-                   <div class="btn btn-white">Case Study</div>
+                   <div class="btn btn-white" routerLink="/work/networking">Case Study</div>
                 </div>
              </div>
           </div>
@@ -68,7 +66,7 @@
                    <h1>Event Hosting<br>made stressless</h1>
                    <h6>UX <span>. UI . web .</span><span> Mobile .</span><span>B2C</span></h6>
                    <div class="button">
-                      <div class="btn btn-white">Case Study</div>
+                      <div class="btn btn-white" routerLink="/work/event-management">Case Study</div>
                    </div>
                 </div>
              </div>
@@ -81,25 +79,25 @@
                 <h1>Event Hosting<br>made stressless</h1>
                 <h6>UX <span>. UI . web .</span><span> Mobile .</span><span>B2C</span></h6>
                 <div class="button">
-                   <div class="btn btn-white">Case Study </div>
+                   <div class="btn btn-white" routerLink="/work/event-management">Case Study </div>
                 </div>
              </div>
           </div>
        </div>
     </div>
-    <div class="design-layout2">
+    <div class="design-layout">
        <div class="container">
           <div class="row">
-             <div class="col-md-6">
+             <div class="col-md-7">
                 <div class="banner-header only_web">
                    <h1>To adapt<br>organic food<br>as a Lifestyle</h1>
                    <h6>UX <span>. UI . web .</span><span> Mobile .</span><span>B2C</span></h6>
                    <div class="button">
-                      <div class="btn btn-white">Case Study</div>
+                      <div class="btn btn-white" routerLink="/work/health-care">Case Study</div>
                    </div>
                 </div>
              </div>
-             <div class="col-md-6">
+             <div class="col-md-5">
                 <div class="image">
                    <img src="./assets/images/works/mobiles.png">
                 </div>
@@ -108,12 +106,176 @@
                 <h1>To adapt<br>organic food<br>as a Lifestyle</h1>
                 <h6>UX <span>. UI . web .</span><span> Mobile .</span><span>B2C</span></h6>
                 <div class="button">
-                   <div class="btn btn-white">Case Study</div>
+                   <div class="btn btn-white" routerLink="/work/health-care">Case Study</div>
                 </div>
              </div>
           </div>
        </div>
     </div>
+    <div class="design-layout1">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-6">
+               <div class="banner-header only_web">
+                  <h1>Website for Startup</h1>
+                  <h6>UX <span>. UI .</span><span> B2C</span></h6>
+                  <div class="button">
+                     <div class="btn btn-white" routerLink="/work/uxahead">Case Study</div>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-6">
+               <div class="image img">
+                  <img src="./assets/images/works/uxahead 1.png">
+               </div>
+            </div>
+            <div class="col-sm-12 banner-header only-mobile">
+               <h1>Website for Startup</h1>
+               <h6>UX <span>. UI .</span><span> B2C</span></h6>
+               <div class="button">
+                  <div class="btn btn-white" routerLink="/work/uxahead">Case Study</div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+    <div class="design-layout">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-6">
+               <div class="banner-header only_web">
+                  <h1>A designers platform for creative upskill</h1>
+                  <h6>UX <span>. UI .</span><span> Mobile </span><span>. Web .</span><span> B2C</span></h6>
+                  <div class="button">
+                     <div class="btn btn-white" routerLink="/work/skill-development">Case Study</div>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-6">
+               <div class="image img">
+                  <img src="./assets/images/works/skill5.png">
+               </div>
+            </div>
+            <div class="col-sm-12 banner-header only-mobile">
+               <h2>A designers platform for creative upskill</h2>
+                  <h6>UX <span>. UI .</span><span> Mobile </span><span>. Web .</span><span> B2C</span></h6>
+               <div class="button">
+                  <div class="btn btn-white" routerLink="/work/skill-development">Case Study</div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+   <div class="design-layout1">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-7">
+               <div class="banner-header only_web">
+                  <h1>Child Care Portal</h1>
+                  <h6>UX <span>. UI .</span><span> Mobile </span><span>. Web .</span><span> B2C</span></h6>
+                  <div class="button">
+                     <div class="btn btn-white" routerLink="/work/childcare-portal">Case Study</div>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-5">
+               <div class="image">
+                  <img src="./assets/images/works/Child1.png">
+               </div>
+            </div>
+            <div class="col-sm-12 banner-header only-mobile">
+               <h1>Child Care Portal</h1>
+               <h6>UX <span>. UI .</span><span> Mobile </span><span>. Web .</span><span> B2C</span></h6>
+               <div class="button">
+                  <div class="btn btn-white" routerLink="/work/childcare-portal">Case Study</div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+   <div class="design-layout">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-7">
+               <div class="banner-header only_web">
+                  <h1>A Customer Advocacy Platform</h1>
+                  <h6>UX <span>. UI .</span><span> Web .</span><span> B2B2C</span></h6>
+                  <div class="button">
+                     <div class="btn btn-white" routerLink="/work/marketing">Case Study</div>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-5">
+               <div class="image">
+                  <img src="./assets/images/works/market1.png">
+               </div>
+            </div>
+            <div class="col-sm-12 banner-header only-mobile">
+               <h1>A Customer Advocacy Platform</h1>
+                  <h6>UX <span>. UI .</span><span> Web .</span><span> B2B2C</span></h6>
+               <div class="button">
+                  <div class="btn btn-white" routerLink="/work/marketing">Case Study</div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+   <div class="design-layout1">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-7">
+               <div class="banner-header only_web">
+                  <h1>Automobile Usability<br> Testing</h1>
+                  <h6>UX <span>. UI .</span><span> Web .</span><span>Mobile .</span><span> B2C</span></h6>
+                  <div class="button">
+                     <div class="btn btn-white" routerLink="/work/automobile-usability">Case Study</div>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-5">
+               <div class="image">
+                  <img src="./assets/images/works/Automobile usability testing.png">
+               </div>
+            </div>
+            <div class="col-sm-12 banner-header only-mobile">
+               <h1>Automobile Usability Testing</h1>
+                  <h6>UX <span>. UI .</span><span> Web .</span><span>Mobile .</span><span> B2C</span></h6>
+               <div class="button">
+                  <div class="btn btn-white" routerLink="/work/automobile-usability">Case Study</div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+   <div class="design-layout">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-7">
+               <div class="banner-header only_web">
+                  <h1>Repository of Accomplishments</h1>
+                  <h6>UX <span>. UI .</span><span> Web .</span><span> B2C</span></h6>
+                  <div class="button">
+                     <div class="btn btn-white" routerLink="/work/construction-portal">Case Study</div>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-5">
+               <div class="image">
+                  <img src="./assets/images/works/constructions.png">
+               </div>
+            </div>
+            <div class="col-sm-12 banner-header only-mobile">
+               <h1>Repository of Accomplishments</h1>
+                  <h6>UX <span>. UI .</span><span> Web .</span><span> B2C</span></h6>
+               <div class="button">
+                  <div class="btn btn-white" routerLink="/work/construction-portal">Case Study</div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+ 
+
     <div class="craft">
       <div class="container">
         <div class="row">
