--- a/src/app/modules/career/components/ui-job-description/ui-job-description.component.html
+++ b/src/app/modules/career/components/ui-job-description/ui-job-description.component.html
@@ -1,7 +1,6 @@
 <div class="career-ui">
     <div class="banner only-mobile">
        <div class="container">
-        
              <h1>Drop in your detail <br> if you want to be <span> a part of us</span> </h1>
              <h6>Candidates can share their resume<br> with portfolio to  <span>work@uxmint.in</span></h6>
           
@@ -35,7 +34,7 @@
                       - Degree in Fine Art, Vis. Comm, Media & Studies, Product Design is<br>preferred.
                    </p>
                    <div class="button">
-                      <div class="btn btn-white" routerLink="/career/job/apply">Apply</div>
+                      <div class="btn btn-white"><a href="https://www.linkedin.com/jobs/view/2803996787">Apply</a></div>
                    </div>
                 </div>
              </div>
