--- a/src/app/modules/services/components/ui-development/ui-development.component.html
+++ b/src/app/modules/services/components/ui-development/ui-development.component.html
@@ -173,7 +173,7 @@
         <ngb-panel id="static-1"  >  
            <ng-template ngbPanelTitle>
               <div class="dis_flex">
-                 <div> Business Understanding </div>
+                 <div> Brief Understanding </div>
                  <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
               </div>
             </ng-template> 
@@ -302,7 +302,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="list">
-                        <img src="./assets/images/services/icon-17.svg"><span>Understanding Business</span>
+                        <img src="./assets/images/services/icon-17.svg"><span>Brief Understanding </span>
                     </div>
                     <div class="list">
                         <img src="./assets/images/services/icon-19.svg"><span>Platform</span>
