--- a/src/app/modules/work/components/event-management/event-management.component.html
+++ b/src/app/modules/work/components/event-management/event-management.component.html
@@ -80,20 +80,20 @@
                 <div class="needs">
                     <div class="needs-right">
                        <h6>Needs</h6>
-                       <p> Shortlisted set of services that match your budget and spl. occasion</p>
-                       <p> Break down of the total cost for the service</p>
-                       <p> Similar works, Testimonials, Videos</p>
-                       <p> Team members, Portfolio</p>
-                       <p> Contact inline, Request call via phone</p>
+                       <p> - Shortlisted set of services that match your budget and spl. occasion</p>
+                       <p>- Break down of the total cost for the service</p>
+                       <p>- Similar works, Testimonials, Videos</p>
+                       <p>- Team members, Portfolio</p>
+                       <p>- Contact inline, Request call via phone</p>
                     </div>
                     <div class="needs-right">
                         <h6>Challenges</h6>
-                        <p> Decidophobia, Dilemma of selecting an option</p>
-                        <p> Not having a clarity on the cost of the service</p>
-                        <p> How skilled is this service provider?</p>
-                        <p> How many events have they done in past?</p>
-                        <p> What is the track record of this service provider?</p>
-                        <p> How to get in touch with the right service provider?</p>
+                       <p>- Decidophobia, Dilemma of selecting an option</p>
+                       <p>- Not having a clarity on the cost of the service</p>
+                       <p>- How skilled is this service provider?</p>
+                       <p>- How many events have they done in past?</p>
+                       <p>- What is the track record of this service provider?</p>
+                       <p>- How to get in touch with the right service provider?</p>
                     </div>
                  </div>
             </div>
@@ -171,4 +171,16 @@
             </div>
         </div>
     </div>
+    <div class="craft">
+        <div class="container">
+          <div class="row">
+             <div class="col-md-4">
+             <h2>Let's craft design together!</h2>
+          </div>
+             <div class="button">
+                 <div class="btn-white">Let's Talk</div>
+             </div>
+        </div>
+        </div>
+     </div>
 </div>
