--- a/src/app/modules/work/components/uxahead/uxahead.component.html
+++ b/src/app/modules/work/components/uxahead/uxahead.component.html
@@ -75,12 +75,14 @@
     <div class="image-event">
         <div class="container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 orderone">
                 <h6>Wireframes</h6>
             </div>
        </div>
     </div>
+    <div class="ordertwo">
         <img src="./assets/images/works/uxahead 3.png">
+    </div>
     </div>
     <div class="research">
         <div class="container">
