--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,12 +6,22 @@
     font-weight: 600;
     font-size: 22px;
 }
+header{
+    z-index: 1;
+}
 .nav-item{
     margin-left: 22px;
 }
+img{
+    width: 25%;
+    margin-left: -35px;
+    padding-top: 5px;
+}
 .nav-link{
-    color: #3B3B3B;
-    font-weight: 600;
+    font-family: Muli;
+    font-size: 16px;
+    color: #505050;
+    font-weight: 400;
 }
 .menu-activator{
     cursor: pointer;
@@ -28,6 +38,13 @@
         height: 20px;
         margin-left: -35px;
         top: 11px;
+    }
+}
+@include media-breakpoint-down(sm){
+    img{
+        width: 70%;
+        margin-left: -24px;
+        padding-top: 5px;
     }
 }
 footer{
