--- a/src/app/components/engagement-models/engagement-models.component.scss
+++ b/src/app/components/engagement-models/engagement-models.component.scss
@@ -1,15 +1,17 @@
 @import '~bootstrap/scss/functions';
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
-
+:host{
+    padding-top: 0px;
+}
 .engagement{
-    
     .banner{
+        padding-top: 140px;
+        top: -100px;
         position: relative;
-        height: 700px;
-        padding: 245px 0px;
+        height: 830px;
+        padding: 350px 0px;
         background-color: #FA6D37;
-
         .engagement-layout{
         h1{
             font-size: 56px;
@@ -27,7 +29,6 @@
              span{
                 color: #FFFFFF;
                 text-decoration: underline;
-                
             }
         }
     }      
@@ -50,8 +51,7 @@
                 font-size: 24px;
                 padding-top: 15px;
             }
-    }
-
+        }
     }
 }
 @include media-breakpoint-down(sm) {
@@ -66,23 +66,18 @@
        }
    }
 }
-
 .only-mobile{
     display: none;
 }
-
 @include media-breakpoint-down(sm) {
-
     .only-mobile{
-       
         display: block;
-        
+        margin-top: -100px;
         ::ng-deep{
             .card{
                 background: #E56635 !important;
             }
         }
-
         ::ng-deep{
         .card-header {
             background: #E56635 !important;
@@ -90,7 +85,6 @@
         .btn-link:hover {
             color: #FFFFFF;
             font-size: 20px;
-        
         }
         .btn-link {
             font-size: 20px;
@@ -119,8 +113,6 @@
     }
         .design-left{
             padding: 40px 20px;
-    
-          
             p{
                 font-size: 20px;
                 color: #FFFFFF;
@@ -129,7 +121,6 @@
         }
         .design-right{
             padding: 30px 20px;
-    
               .logo-image{
                 padding-top: 10px;
                 padding-bottom: 20px;
@@ -141,16 +132,18 @@
                 margin-top: -55px;
             }
         }
-
     }
     .feature-work{
         display: none;
     }
 }
-
+.hr{
+    border-top: 1px solid #707070;
+}
 .feature-work{
     background-color: #FA6D37;
     padding: 0 0 4px 5px;
+    margin-top: -100px;
     .row{
         margin-right: 0;
         margin-left: 0;
