--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -33,8 +33,9 @@ button{
         list-style: none;
         margin-bottom: 10px;
         a{
-            color: #FFF;
-            font-size: 18px;
+            font-family: Muli;
+            font-size: 16px;
+            color: #707070;
             &:hover{
                 text-decoration: none;
             }
