--- a/src/app/components/services/services.component.scss
+++ b/src/app/components/services/services.component.scss
@@ -1,13 +1,17 @@
 @import '~bootstrap/scss/functions';
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
-
+:host{
+    padding-top: 0px;
+}
 .services{
     .layout{
         background-color: #5277BA;
+        padding-top: 140px;
+        top: -100px;
         position: relative;
-        height: 700px;
-        padding: 245px 0px;
+        height: 830px;
+        padding: 350px 0px;
         h1{
             font-size: 60px;
             font-weight: 400;
