--- a/src/app/components/works/works.component.scss
+++ b/src/app/components/works/works.component.scss
@@ -1,13 +1,17 @@
 @import '~bootstrap/scss/functions';
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
-
+:host{
+    padding-top: 0px;
+}
 .banner{
        background-color: #FCFCFC;
-        height: 550px;
+       padding-top: 140px;
+       top: -100px;
+       position: relative;
+       height: 830px;
+       padding: 350px 0px;
         .work-layout{
-            padding: 300px 30px;
-
         h1{
             font-size: 64px;
             font-family: Baskerville;
@@ -19,16 +23,11 @@
         }
         hr.line {
             border-top: 1px solid #707070;
-            
           }
-    }
-
-    @include media-breakpoint-down(lg) {
-        height: 650px;
-       
     }
     @include media-breakpoint-down(md) {
         height: 400px;
+        padding: 70px 0px;
         .work-layout{
             padding: 125px 15px;
             h1{
@@ -43,15 +42,12 @@
        }
     }
 }
-
 .cater{
     background-color: #FCFCFC;
-    padding: 100px 0px;
+    margin-top: -20%;
     color: #FFF;
-    .left{
-        margin-left: -100px;
-    }
-    h1{
+    height: 250px;
+    h2{
         font-size: 92px;
         font-family: Inter;
         color: #C3343C;
@@ -66,17 +62,15 @@
     .types{
         background-color: #FFFFFF;
         cursor: pointer;
-        //padding: 5px 5px;
         margin-bottom: 50px;
         margin-left: 100px;
     }
     @include media-breakpoint-down(lg){
-        padding: 50px 0px;
         .types{
             margin-left: 0px;
         }
         .left{
-            margin-left: -20px;
+            margin-left: 50px;
         }
     }
     @include media-breakpoint-down(md){
@@ -91,21 +85,15 @@
             font-size: 72px;
         }
         .left{
-            margin-left: -17px;
+            padding-top: 50px;
+            margin-left: 25px;
         }
     }
     @include media-breakpoint-down(sm){
+        margin-top: -100px;
         padding: 5px 0px 20px 0px;
-        h1{
+        h2{
             font-size: 52px;
-        }
-        .types{
-            .col-md-7{
-                width: 25%;
-            }
-            .col-md-3{
-                width: 75%;
-            }
         }
     }
 }
@@ -114,9 +102,9 @@
     display: none;
 }
 .design-layout{
-    background-color: #FCFCFC;
+    background-color: #FFFFFF;
     color: #FFFFFF;
-    padding: 100px 0 80px 0;
+    padding: 100px 0 10px 0;
     .banner-header{
        
         padding: 60px 0px;
@@ -147,6 +135,9 @@
             font-family: Muli;
         }
     }
+    .img{
+        margin-left: -150px;
+        }
     .image{
         img{
             margin-left: -30%;
@@ -184,7 +175,7 @@
         .only-mobile{
             display: block;
         }
-      
+
             .only_web{
                 display: none;
             }
@@ -205,7 +196,6 @@
     
     }
 }
-
 .design-layout1{
     background-color: #FCFCFC;
     color: #FFFFFF;
@@ -240,6 +230,9 @@
             font-family: Muli;
         }
        
+    }
+    .img{
+    margin-left: -100px;
     }
     .image{
         img{
@@ -295,100 +288,6 @@
                 border-radius: 0px;
             }
         }
-    
-    }
- 
-}
-
-.design-layout2{
-    background-color: #FCFCFC;
-    position: relative;
-    color: #FFFFFF;
-    padding-top: 100px;
-    .banner-header{
-        padding: 150px 0px;
-        h1{
-            font-size: 57px;
-            font-family: Baskerville;
-            line-height: 65px;
-            color: #000000;
-        }
-        h6{
-            font-size: 20px;
-            font-family: Muli;
-            color: #707070;
-            margin-top: 30px;
-        }
-        .button{
-            margin-top: 40px;
-            img{
-                margin-left: 35px;
-            }
-        }
-        .btn-white{
-            border: 2px solid #707070;
-            border-radius: 0;
-            color: #0D0D0D;
-            cursor: pointer;
-            font-size: 20px;
-            font-family: Muli;
-        }
-    }
-    .image{
-        img{
-            margin-left: -10%;
-        }
-    }
-    @include media-breakpoint-down(lg) {  
-        padding-top: 150px;
-        .banner-header{
-            padding: 130px 0px;
-        }
-    }  
-    @include media-breakpoint-down(md) {
-        padding-top: 130px;
-        .banner-header{
-            padding: 100px 0px;
-            h1{
-                font-size: 24px;
-                font-weight: 500;
-                line-height: 50px;
-            }
-            h6{
-                font-size: 16px;
-                font-weight: 300;
-                margin-top: 30px;
-            }
-            .btn-white{
-                font-size: 16px;
-            }
-        }
-    }
-    @include media-breakpoint-down(sm) {
-        padding-top: 100px;
-        padding-left: 15px;
-        .only-mobile{
-            display: block;
-        }
-      
-            .only_web{
-                display: none;
-            }
-      
-        .banner-header{
-            padding: 80px 0px;
-            .button{
-                margin-top: 40px;
-                img{
-                    margin-left: 35px;
-                }
-            }
-            .btn-white{
-                padding: 15px;
-                border-radius: 0px;
-            }
-        }
-    
     }
 }
 .craft{
