--- a/src/app/modules/career/components/job-apply/job-apply.component.html
+++ b/src/app/modules/career/components/job-apply/job-apply.component.html
@@ -74,7 +74,7 @@
                                 <h6>Min</h6>
                                 <div class="col-md-4">
                                     <div class="field-group">
-                                        <mat-form-field appearance="outline">
+                                        <mat-form-field appearance="outline" class="min">
                                             <input matInput type="text" placeholder="0" formControlName="location">
                                         </mat-form-field>
                                     </div>
@@ -82,7 +82,7 @@
                                 <h6>Max</h6>
                                 <div class="col-md-4">
                                     <div class="field-group">
-                                        <mat-form-field appearance="outline">
+                                        <mat-form-field appearance="outline" class="min">
                                             <input matInput type="text" placeholder="0" formControlName="location">
                                         </mat-form-field>
                                     </div>
