--- a/src/app/modules/work/components/childcare-portal/childcare-portal.component.scss
+++ b/src/app/modules/work/components/childcare-portal/childcare-portal.component.scss
@@ -25,30 +25,46 @@ h6{
 }   
     .banner{
         background-color: #FDDED8;
-        position: relative;
-        color: #FFFFFF;
-        padding-top: 150px;
-        .banner-header{
-            padding: 150px 0px;
-        }
+        padding-top: 140px;
+       top: -100px;
+       position: relative;
+       height: 830px;
+       padding: 350px 0px;
         h6{
             font-weight: 300;
             margin-top: 30px;
         }
+        img{
+            position: absolute;
+            width: 85%;
+            margin-top: -40%;
+            top: 100px;
+            right: 20px;
+        }
         @include media-breakpoint-down(lg){
             .banner-header{
-                padding: 150px 0px;
+                padding: 50px 0px;
             }
         }
         @include media-breakpoint-down(md){
             .banner-header{
-                padding: 85px 0px;
+                padding: 5px 0px;
+            }
+        }
+        @include media-breakpoint-down(sm){
+            .banner-header{
+                padding: 250px 0px;
+            }
+            img{
+                margin-top: -70%;
+                margin-left: -40px;
             }
         }
     }
     .about-project{
         background-color: #FCFCFC;
         padding: 200px 0px;
+        margin-top: -100px;
         .row{
             padding-bottom: 50px;
             margin-right: 0;
@@ -71,7 +87,7 @@ h6{
         @include media-breakpoint-down(sm){
             img{
                 width: 100%;
-                display: none !important;
+                //display: none !important;
             }  
         }
     }
@@ -293,10 +309,3 @@ h6{
     border-radius: 15px;
     box-shadow: none !important;
 }
-@include media-breakpoint-down(sm) {
-    .banner{
-        img{
-            width: 100%;
-        }
-    }
-    }
