--- a/src/app/modules/work/components/health-care/health-care.component.scss
+++ b/src/app/modules/work/components/health-care/health-care.component.scss
@@ -27,15 +27,15 @@ h6{
 }  
     .banner{
         background-color: #94D5BD;
+        padding-top: 140px;
+        top: -100px;
         position: relative;
-        color: #FFFFFF;
-        padding: 150px 0px;
-        .banner-header{
-            padding: 150px 0px;
-        }
+        height: 830px;
+        padding: 350px 0px;
         img{
             position: absolute;
             width: 100%;
+            margin-top: -34%;
             top: 20px;
             right: 20px;
         }
@@ -46,7 +46,7 @@ h6{
         }
         @include media-breakpoint-down(lg){
             .banner-header{
-                padding: 150px 0px;
+                padding: 15px 0px;
             }
         }
         @include media-breakpoint-down(md){
@@ -54,10 +54,21 @@ h6{
                 padding: 85px 0px;
             }
         }
+        @include media-breakpoint-down(sm){
+            .banner-header{
+                padding: 150px 0px;
+            }
+            img{
+                width: 100%;
+                margin-top: -65%;
+                margin-left: -40px;
+            }
+        }
     }
     .about-project{
         background-color: #FCFCFC;
         padding: 200px 0px;
+        margin-top: -100px;
         p{
              font-size: 18px;
             line-height: 40px;
