--- a/src/app/modules/work/components/networking/networking.component.html
+++ b/src/app/modules/work/components/networking/networking.component.html
@@ -109,6 +109,11 @@
             </div>
         </div>
     </div>
+    <div class="wireframe">
+        <div class="container">
+            <h2>We went ahead with mobile first design with wireframe and as with UI Design</h2>
+        </div>
+    </div>
     <div class="typography-image">
         <img src="./assets/images/works/sify1.png">
     </div> 
@@ -121,7 +126,8 @@
     <div class="research">
         <div class="container">
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-md-2"></div>
+                <div class="col-md-7">
                     <h6>Creating a Design System</h6>
                     <p>Making a design system to adapt to different devices, scalable services, Upcoming products and consistency throughout the visual language.</p>
                 </div>
@@ -174,4 +180,16 @@
             </div>
         </div>
     </div>
+    <div class="craft">
+        <div class="container">
+          <div class="row">
+             <div class="col-md-4">
+             <h2>Let's craft design together!</h2>
+          </div>
+             <div class="button">
+                 <div class="btn-white">Let's Talk</div>
+             </div>
+        </div>
+        </div>
+     </div>
 </div>
