--- a/src/app/modules/work/components/skill-development/skill-development.component.scss
+++ b/src/app/modules/work/components/skill-development/skill-development.component.scss
@@ -25,15 +25,15 @@ h6{
 } 
     .banner{
         background-color: #DDDDDD;
+        padding-top: 140px;
+        top: -100px;
         position: relative;
-        color: #FFFFFF;
-        padding: 150px 0px;
-        .banner-header{
-            padding: 150px 0px;
-        }
+        height: 830px;
+        padding: 350px 0px;
         img{
             position: absolute;
             width: 100%;
+            margin-top: -15%;
             top: 20px;
             right: 20px;
         }
@@ -43,7 +43,7 @@ h6{
         }
         @include media-breakpoint-down(lg){
             .banner-header{
-                padding: 150px 0px;
+                padding: 15px 0px;
             }
             img{
                 position: absolute;
@@ -53,14 +53,26 @@ h6{
             }
         }
         @include media-breakpoint-down(md){
+            height: 650px;
             .banner-header{
-                padding: 85px 0px;
+                padding: 15px 0px;
+            }
+        }
+        @include media-breakpoint-down(sm){
+            .banner-header{
+                padding: 150px 0px;
+            }
+            img{
+                width: 100%;
+                margin-top: -45%;
+                margin-left: -40px;
             }
         }
     }
     .about-project{
         background-color: #FCFCFC;
         padding: 200px 0px;
+        margin-top: -100px;
         .row{
             margin-right: 0;
             margin-left: 0;
@@ -86,7 +98,7 @@ h6{
         @include media-breakpoint-down(sm){
             img{
                 width: 100%;
-                display: none !important;
+                //display: none !important;
             }  
         }
     }
