--- a/src/app/modules/work/components/uxahead/uxahead.component.scss
+++ b/src/app/modules/work/components/uxahead/uxahead.component.scss
@@ -24,30 +24,47 @@ h6{
 }  
     .banner{
         background-color: #F0DBDE;
-        position: relative;
-        color: #000000;
-        padding: 150px 0px;
-        .banner-header{
-            padding: 95px 0px;
-        }
+        padding-top: 140px;
+       top: -100px;
+       position: relative;
+       height: 830px;
+       padding: 350px 0px;
         h6{
             font-weight: 300;
             margin-top: 30px;
         }
+        img{
+            position: absolute;
+            width: 100%;
+            margin-top: -15%;
+            top: 20px;
+            right: 20px;
+        }
         @include media-breakpoint-down(lg){
             .banner-header{
-                padding: 150px 0px;
+                padding: 15px 0px;
             }
         }
         @include media-breakpoint-down(md){
             .banner-header{
-                padding: 85px 0px;
+                padding: 15px 0px;
+            }
+        }
+        @include media-breakpoint-down(sm){
+            .banner-header{
+                padding: 150px 0px;
+            }
+            img{
+                width: 100%;
+                margin-top: -45%;
+                margin-left: -40px;
             }
         }
     }
     .about-project{
         background-color: #FCFCFC;
         padding: 200px 0px;
+        margin-top: -100px;
         .row{
             margin-right: 0;
             margin-left: 0;
@@ -81,7 +98,7 @@ h6{
         @include media-breakpoint-down(sm){
             img{
                 width: 100%;
-                display: none !important;
+                //display: none !important;
             }  
         }
     }
